re PR c++/7718 ('complex' template instantiation causes internal compiler error (gcc 3.1, gcc 3.2))

cp:
	PR c++/7718
	* pt.c (tsubst_decl): Remove assert.
testsuite:
	* g++.dg/template/subst1.C: New test.

From-SVN: r57211